# styx

./: .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  QUICKSTART_ALME.md  README.md  pyproject.toml  requirements.txt
experiments/: landscape_analysis.py  run_benchmark.py
experiments/configs/: example_config.json
notebooks/: 01_quickstart.ipynb  02_alme_analysis.ipynb
src/styx/: __init__.py
src/styx/datasets/: __init__.py  loaders.py
src/styx/experiments/: __init__.py  trainer.py
src/styx/models/: __init__.py  simple_nets.py
src/styx/optimizers/: __init__.py  alme.py  base.py  multi_optim.py  optimizer_attempt.py  optimizer_gpt.py  optimizer_gpt_hybrid.py
src/styx/visualization/: __init__.py  plots.py
tests/: test_alme_optimizer.py  test_models.py  test_precommit.py
