[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styx"
version = "0.1.0"
description = "Experimenting with optimizing gradient descent for deep learning"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Caleb Chin", email = "caleb.timothy.chin@gmail.com"},
    {name = "Avi Ruthen", email = "aviruthen@gmail.com"},
    {name = "Francis Bahk", email = "feb47@cornell.edu"}
]
keywords = ["deep learning", "gradient descent", "optimization", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.0",
    "tensorboard>=2.18.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "nbstripout>=0.7.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/calebchin/styx"
Repository = "https://github.com/calebchin/styx"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=styx --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
